@@ -1,2 +1,5 @@
 [item-name]
 demolisher-compass=Demolisher compass
+
+[shortcut-name]
+demolisher-compass=Demolisher compass
